# datalink

./: Cargo.toml
.github/workflows/: rust.yml
datalink_derive/: Cargo.toml
datalink_derive/src/: internals.rs  lib.rs
examples/: derive.rs
src/: data.rs  id.rs  lib.rs  link.rs  link_builder.rs  links.rs  macros.rs  meta.rs  query.rs  request.rs  value.rs  well_known.rs
src/data/: constant.rs  erased.rs  ext.rs  format.rs  impls.rs  unique.rs
src/data/impls/: core.rs  json.rs  std.rs  toml.rs
src/links/: filtered.rs  impls.rs
src/query/: datafilter.rs  dataquery.rs  filter.rs  linkfilter.rs  linkquery.rs  mod.rs  query.rs  receiver.rs  selectors.rs
src/rr/: erased.rs  meta.rs  mod.rs  provided.rs  query.rs  receiver.rs  request.rs  typeset.rs
