[package]
name = "datalink"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "unique", "well_known"]
std = []
unique = []
well_known = []
derive = ["dep:datalink_derive"]
random = ["dep:rand"]
json = ["dep:serde_json", "std"]
toml = ["dep:toml", "std"]

[dependencies]
rand = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
toml = { version = "0.8", optional = true }
datalink_derive = { git = "https://github.com/SebastianSpeitel/datalink_derive", version = "0.3.0", rev = "0821903", optional = true }
filters = { git = "https://github.com/SebastianSpeitel/filters" }
