[workspace]
members = ["datalink_derive"]

[package]
name = "datalink"
version = "0.4.2"
edition = "2021"

[features]
default = ["std", "unique", "well_known"]
std = []
unique = []
well_known = []
derive = ["dep:datalink_derive"]
random = ["dep:rand"]
json = ["dep:serde_json", "std"]
toml = ["dep:toml", "std"]

[dependencies]
rand = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
toml = { version = "0.8", optional = true }
datalink_derive = { path = "datalink_derive", optional = true }

[[example]]
name = "derive"
required-features = ["derive"]
